fix(api): use Java 17-compatible List access in GlobalTrendsService